--- a/THESIS/references.bib
+++ b/THESIS/references.bib
@@ -80,3 +80,24 @@
   year={1984},
   publisher={Elsevier}
 }
+
+@inproceedings{popovici2002cellular,
+  title={Cellular automata in image processing},
+  author={Popovici, Adriana and Popovici, Dan},
+  booktitle={Fifteenth International Symposium on Mathematical Theory of Networks and Systems},
+  volume={1},
+  pages={1--6},
+  year={2002},
+  organization={Citeseer}
+}
+
+@article{margolus1984physics,
+  title={Physics-like models of computation},
+  author={Margolus, Norman},
+  journal={Physica D: Nonlinear Phenomena},
+  volume={10},
+  number={1-2},
+  pages={81--95},
+  year={1984},
+  publisher={Elsevier}
+}
