--- a/THESIS/references.bib
+++ b/THESIS/references.bib
@@ -101,3 +101,10 @@
   year={1984},
   publisher={Elsevier}
 }
+
+@book{louis2018probabilistic,
+  title={Probabilistic Cellular Automata},
+  author={Louis, Pierre-Yves and Nardi, Francesca R},
+  year={2018},
+  publisher={Springer}
+}
