--- a/THESIS/references.bib
+++ b/THESIS/references.bib
@@ -108,3 +108,22 @@
   year={2018},
   publisher={Springer}
 }
+
+@article{hedlund1969endomorphisms,
+  title={Endomorphisms and automorphisms of the shift dynamical system},
+  author={Hedlund, Gustav A},
+  journal={Mathematical systems theory},
+  volume={3},
+  number={4},
+  pages={320--375},
+  year={1969},
+  publisher={Springer}
+}
+
+@book{zuse1970calculating,
+  title={Calculating space},
+  author={Zuse, Konrad},
+  year={1970},
+  publisher={Massachusetts Institute of Technology, Project MAC Cambridge, MA}
+}
+
