--- a/THESIS/references.bib
+++ b/THESIS/references.bib
@@ -127,3 +127,24 @@
   publisher={Massachusetts Institute of Technology, Project MAC Cambridge, MA}
 }
 
+@article{smith1971simple,
+  title={Simple computation-universal cellular spaces},
+  author={Smith III, Alvy Ray},
+  journal={Journal of the ACM (JACM)},
+  volume={18},
+  number={3},
+  pages={339--353},
+  year={1971},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{kauffman1984emergent,
+  title={Emergent properties in random complex automata},
+  author={Kauffman, Stuart A},
+  journal={Physica D: Nonlinear Phenomena},
+  volume={10},
+  number={1-2},
+  pages={145--156},
+  year={1984},
+  publisher={Elsevier}
+}
