--- a/THESIS/references.bib
+++ b/THESIS/references.bib
@@ -148,3 +148,113 @@
   year={1984},
   publisher={Elsevier}
 }
+
+@article{bak1990forest,
+  title={A forest-fire model and some thoughts on turbulence},
+  author={Bak, Per and Chen, Kan and Tang, Chao},
+  journal={Physics letters A},
+  volume={147},
+  number={5-6},
+  pages={297--300},
+  year={1990},
+  publisher={Elsevier}
+}
+
+@article{drossel1992self,
+  title={Self-organized critical forest-fire model},
+  author={Drossel, Barbara and Schwabl, Franz},
+  journal={Physical review letters},
+  volume={69},
+  number={11},
+  pages={1629},
+  year={1992},
+  publisher={APS}
+}
+
+@article{zinck2010wildfire,
+  title={Wildfire, landscape diversity and the Drossel--Schwabl model},
+  author={Zinck, Richard D and Johst, Karin and Grimm, Volker},
+  journal={Ecological Modelling},
+  volume={221},
+  number={1},
+  pages={98--105},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{millington2006models,
+  title={Models, data and mechanisms: quantifying wildfire regimes},
+  author={Millington, James DA and Perry, George LW and Malamud, Bruce D},
+  journal={Geological Society, London, Special Publications},
+  volume={261},
+  number={1},
+  pages={155--167},
+  year={2006},
+  publisher={Geological Society of London}
+}
+
+@article{ratz1995long,
+  title={Long-term spatial patterns created by fire: a model oriented towards boreal forests},
+  author={Ratz, Armin},
+  journal={International Journal of Wildland Fire},
+  volume={5},
+  number={1},
+  pages={25--34},
+  year={1995},
+  publisher={CSIRO}
+}
+
+@article{zinck2008more,
+  title={More realistic than anticipated: a classical forest-fire model from statistical physics captures real fire shapes},
+  author={Zinck, RD and Grimm, V},
+  journal={The Open Ecology Journal},
+  volume={1},
+  number={1},
+  year={2008}
+}
+
+@book{wolfram2018cellular,
+  title={Cellular automata and complexity: collected papers},
+  author={Wolfram, Stephen},
+  year={2018},
+  publisher={CRC Press}
+}
+
+@misc{elwin1982winning,
+  title={Winning ways for your mathematical plays},
+  author={Elwin, R Berkelamp and Conway, John H and Guy, Richard K},
+  year={1982},
+  publisher={Academic Press}
+}
+
+@article{langton1992life,
+  title={Life at the edge of chaos},
+  author={Langton, Christopher},
+  journal={Artificial life II. Santa Fe Institute Studies in the Science of Complexity},
+  year={1992},
+  publisher={Addison-Wesley}
+}
+
+@book{poundstone2013recursive,
+  title={The recursive universe: cosmic complexity and the limits of scientific knowledge},
+  author={Poundstone, William},
+  year={2013},
+  publisher={Courier Corporation}
+}
+
+@article{cook2004universality,
+  title={Universality in elementary cellular automata},
+  author={Cook, Matthew},
+  journal={Complex systems},
+  volume={15},
+  number={1},
+  pages={1--40},
+  year={2004},
+  publisher={[Champaign, IL, USA: Complex Systems Publications, Inc., c1987-}
+}
+
+@techreport{toffoli1977cellular,
+  title={Cellular automata machines},
+  author={Toffoli, Tommaso},
+  year={1977}
+}
