--- a/THESIS/02-automata.Rmd
+++ b/THESIS/02-automata.Rmd
@@ -1,8 +1,10 @@
 # Cellular Automata
 
-## Modeling
+## Introduction
 
-## Complex Systems
+## Modeling of Complex Systems
+
+Since the solidification of the scientific method in the XVII century ...
 
 ## Cellular Automata
 
@@ -25,9 +27,19 @@ The system evolves in discrete time steps. At each step the update function is a
 
 Despite this apparent simplicity CA are capable of complex behaviour. Their dynamics only defined in terms of local rules exhibit non-trivial patterns at considerable larger scales. The structures that emerge where not designed a priori and their nature is capricious as they could be oscillating, chaotic, ordered, random, transient, stable. This complex behaviour is rich enough to be used to model natural systems.
 
-## CA and Computation
+Wolfram Classification here
 
-## Mathematical Definition
+### Cellular Automata and Computing
+
+An analogy between CA and conventional computers can be made. The initial configuration of a CA could be though as input data to be computed over by the CA rules, producing results several time steps downstream and displayed on whatever configuration reached by the lattice.
+
+This analogy is not coincidence at all and it is further exposed by the history of CA. In the early 1950's von Neumann was trying to build a machine that not only should be self-replicating but also capable of universal computability. Von Neumann's endeavors were succesful and produced the first two-dimensional automaton formally shown to be Turing-complete [@von1966theory]. Tweanty years later Jonh Conway's "Game of Life" was introduced and later was also found to be computationally universal [@elwin1982winning][@poundstone2013recursive]. More recently 1-D CA "Rule 110" has been proved to be universal and is one of the simplest known systems with such property [@cook2004universality].
+
+The usual stratregy to prove that a given CA is universal is to show its equivance with other systems known to be universal. Other strategy is to directly build on the lattice all the primitive elements of computing, namely _storage_ (memory), _transmission_ (internal clock and wires) and _processing_ (AND, OR and NOT gates) [@ilachinski2001cellular]. Once a given system supports these computational primitives building an univesal machine becomes a clerical work of assembling modules. The "Game of Life" is proven to be universal in this fashion.
+
+On the other hand possesing the same power as a convential digital computer plays an important role on our mathematical ability to make predictions on the behaviour of CA, because all universal computers require resources in the same order of magnitude to process a particular algorithm, thus in general a computational shortcut to the simulation of any universal CA does not exist [@toffoli1977cellular]. This implies that even if an analytical expression for exactly capturing the evolution of a universal CA is obtained, evaluating such expression would take asymptotically the same time as just running the CA and observing its own evolution. Thus remarkably the most efficient way to characterize a universal CA is through its own simulation [@ilachinski2001cellular]. 
+
+### Mathematical Definition
 
 The following is adapted from the book Probabilistic Cellular Automata [@louis2018probabilistic].
 
@@ -46,18 +58,18 @@ Defines the states that each automata can take. In common CA settings $S$ is a f
 * The configuration space $S^{V(G)}$:
 This is the set of all posible states of the CA. A specific configuration is denoted as:
 $$ \sigma = \{\sigma_k \in V(G)\} $$
-$\sigma_k f$ is the configuration of the automaton at position $k$.
+$\sigma_k$ is the configuration of the automaton at position $k$.
 
 * The neighborhoods $V_k$:
 $$ V_k \subset  V(G) $$
-The subset of nodes that can influence or interact with the automaton at $k \in V(G)$ (ordinarily it includes itself). A typical configuration for $V_k$ is: $G = \mathds{Z}^2$, and $V_k = \{k, k\pme_1, k\pme_2}$, where $(e_1, e_2)$ is the canonical basis of $\mathds{Z}^2$, (north/south, east/west). This is known as the _von Neumman neighborhood_.
+The subset of nodes that can influence or interact with the automaton at $k \in V(G)$ (ordinarily it includes itself). A typical configuration for $V_k$ is: $G = \mathds{Z}^2$, and $V_k = \{k, k \pm e_1, k \pm e_2\}$, where $(e_1, e_2)$ is the canonical basis of $\mathds{Z}^2$, (north/south, east/west). This is known as the _von Neumman neighborhood_.
 
 * The global update $F$:
 $$ F: S^{V(G)} \rightarrow S^{V(G)} $$
-$$ (F(\sigma))_k = f_k(\sigma_V_k) $$
+$$ (F(\sigma))_k = f_k(\sigma_{V_k}) $$
 The global update $F$ is calculated by applying a local function $f_k$ per automata at $k$. In the classical setting $f_k$ is the same for all the automata.
 
-## Probabilistic Cellular Automata
+### Cellular Automata Extensions
 
 Generalizations to the classical attributes of CA can be conceived [@ilachinski2001cellular] enabling extensions like:
 
@@ -65,20 +77,67 @@ Generalizations to the classical attributes of CA can be conceived [@ilachinski2
 Allows asyncronous updating of the CA.
 
 * Coupled-map Lattices:
-Allows real valued cell states. This systems are simpler than partial differential equations but more complex that standard CA.
+Allows real valued cell states. These systems are simpler than partial differential equations but more complex that standard CA.
 
 * Probabilistic CA:
 The rules are allowed to be stochastic, assigning probabilities to cell state transitions.
 
-Non-homogenenous CA:
-Updating functions are allowed to vary from cell to cell. A simple example is a CA with two rules distributed randomly throughout the lattice. On the other extreme case, simulations have been performed with random assignation of all boolean functions of $k$ inputs [@kauffman1984emergent].
+* Non-homogenenous CA:
+Updating functions are allowed to vary from cell to cell. A simple example is a CA with two rules distributed randomly throughout the lattice. On the other extreme case, simulations have been performed with random assigment of all boolean functions with small number of inputs [@kauffman1984emergent].
 
 * Mobile CA:
+In this model some cells can move thorugh the lattice. The mobile parts of the CA can be thought as robots or agents and their movement is dictated from an internal state that reflects the features of the local environment.
 
+* Structurally Dynamic CA:
+Considers the possibility of evolving cell arragment. In standard CA the lattice is only a substrate for the ongoing computation, but what happens when this passivity is removed.
 
-* Structurally Dynamics CA:
+## Forest Fire Models
 
-## Forest Fire Model
+Forest fire models are a type of Probabilistic Cellular Automata (PCA). They try to capture the dynamics and general patterns of tree clusters that emerge from an evolving forest subject to perturbations.
+
+They trace their origins to statistical physics and are closely related with percolation phenomena and dissipative structures. However they have been proved a valuable tool for ecological and natural hazard sciences as simple but powerful modeling tools [@zinck2010wildfire].
+
+Forest fire models help to tackle questions like: Will the tree population eventually dies out?, What is the general shape of tree clusters?, What is the shape of the boundary between the forest and the fire?
+
+At first glance forest fire models seem similar to epidemeliogical cellular automata models though they place emphasis on finite population and the persistence of a pathology over time in contrast to the infinite forest population and the emphasis on the spatial extension of the fire.
+
+They broadly have the following characteristics [@louis2018probabilistic]:
+
+1. Cells of at least three types:
+  * Non-burning tree
+  * Burning tree
+  * No tree (empty)
+2. A rule for fire initiation:
+  * A starting configuration with fire cells, usually randomly choosen fire positions.
+  * Accident simulation, like with a small probability self-ignition of a tree cell.
+  * Space-time distributed ignition instances (e.g. Poisson distributed).
+3. A rule for fire propagation. It involves a stochastic rule for fire spreading between neighborhoods that can be based on actual terrain conditions.
+
+### The Drossel and Schwabl forest fire model
+
+The forest fire model that will be used through this document is the Drossel and Schwabl model (DSM) [@drossel1992self].
+
+DSM was born from research on statistical physics about phase transitions and self-organized criticality [@bak1990forest][@drossel1992self]. For this reason the CA was not intended as a modeling tool for real wildfires and was only a methaphor.
+
+Nevertheless data from real wildfires was compared against DSM predictions with the, no so surprsing, observation that the model did not perfectly match real world datasets, as it was build with the only concern of generating fire sizes following a power law. DSM was overstimating the frecuency of large fires [@millington2006models]. Even though its origins and pitfalls DMS is still valuable, as it has a strong advantage against other wildfire models due to its simplicity and analytical tractability [@zinck2010wildfire]. Likewise it provides a set of starting assumptions that can be augmented to the required complexity along with the usually seen trade-off between increasing a model's predictive capabilities and its generalizing power.
+
+Consenquently success have been achivied using this simple model, for example fire shape patterns have been obtained that closely resemble actual wildfires [@zinck2008more][@zinck2010wildfire].
+
+The Drossel and Schwabl model consist of a lattice in $\mathds{Z}^2$ populated with three type of cells: $0$ (no tree), $1$ (burning tree), and $2$ (non-burning tree). All cells are syncronously updated according to the following rules:
+For each state $\sigma_k(n)$ at site $k$ and time step $n$.
+
+* A burning tree is consumed at next time step:
+$$\sigma_k(n) = 1 \mapsto  \sigma_k(n) = 0 \textrm{\quad With probability}\ 1$$
+
+* A new tree grows from an empty position $k$, dictated by parameter $p \in [0,1]:$
+$$\sigma_k(n) = 0 \mapsto  \sigma_k(n) = 2 \textrm{\quad With probability}\ p$$
+
+* The fire is propagated through the vecinity or a lightining event occurs, which ignites a tree and is tuned by $f \in [0,1]:$
+$$\sigma_k(n) = 2 \mapsto  \sigma_k(n) = 1$$
+$$\textrm{With probability} \begin{cases}
+  1, & \textrm{if at least one neighboring tree is burning}\\
+  f, & \textrm{if no neighboring tree is burning}
+  \end{cases}$$
 
 ## History
 
@@ -98,17 +157,17 @@ Since then applications have been coming in a variety of domains. In the biologi
 
 Table: Key events in the history of Cellular Automata. Table taken from the book Cellular Automata A Discrete Universe [@ilachinski2001cellular].
 
-Year             Researcher                Discovery
----------------- ------------------------- -----------
-1936              Turing                    Formalized the concept of computability, universal turing machine.
-1948              von Neumann               Introduced self-reproducing automata.      
-1950              Ulam                      Insisted on the need of more realistic models for the behavior of complex extended systems.
-1966              Burks                     Extended von Neumann's work.   
-1967              von Bertalanffy, et al    Applied System Theory to human systems.
-1969              Zuse                      Introduced the concept of "computing spaces".
-1970              Conway                    Introduced the CA "Game of Life".
-1977              Toffoli                   Applied CAs to modeling physical laws.
-1983              Wolfram                   Authored a seminal review article about CAs.
-1984              Cowan, et al              The Santa Fe Institute is founded for interdisciplinary research of complex systems.
-1987              Toffoli, Wolfram          First CA conference held at MIT.
-1992              Varela, et al             First European conference on artificial life.
+Year  Researcher             Discovery
+----- ---------------------- ------------------------------------------------------------------------------------------------------------------------------------
+1936  Turing                 Formalized the concept of computability, universal turing machine.
+1948  von Neumann            Introduced self-reproducing automata.      
+1950  Ulam                   Insisted on the need of more realistic models for the behavior of complex extended systems.
+1966  Burks                  Extended von Neumann's work.   
+1967  von Bertalanffy, et al Applied System Theory to human systems.
+1969  Zuse                   Introduced the concept of "computing spaces".
+1970  Conway                 Introduced the CA "Game of Life".
+1977  Toffoli                Applied CAs to modeling physical laws.
+1983  Wolfram                Authored a seminal review article about CAs.
+1984  Cowan, et al           The Santa Fe Institute is founded for interdisciplinary research of complex systems.
+1987  Toffoli, Wolfram       First CA conference held at MIT.
+1992  Varela, et al          First European conference on artificial life.
